--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <h1>!כל הכבוד</h1>
       <h2>!סיימת את האתגר בהצלחה</h2>
       <div class="final-message">
-        <p class="clue-hint">🍬 <strong>La surprise est au plafond au-dessus de ton bureau</strong> 🍬</p>
+        <p class="clue-hint">🍬 <strong>La surprise est sur la fenêtre</strong> 🍬</p>
       </div>
       <div class="final-decoration">
         <span>🎄</span><span>🎁</span><span>⭐</span><span>🎁</span><span>🎄</span>
