--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <h1>!כל הכבוד</h1>
       <h2>!סיימת את האתגר בהצלחה</h2>
       <div class="final-message">
-        <p class="clue-hint">🍬 <strong>La surprise est sur la fenêtre</strong> 🍬</p>
+        <p class="clue-hint">🍬 <strong>La surprise est sur la plafond</strong> 🍬</p>
       </div>
       <div class="final-decoration">
         <span>🎄</span><span>🎁</span><span>⭐</span><span>🎁</span><span>🎄</span>
@@ -134,5 +134,6 @@
 
   <script src="script.js"></script>
 </body>
+
 
 </html>
